--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Bewerbung</module>
+        <module>DatabasePlugin</module>
+        <module>Database</module>
+        <module>Chatlog</module>
+        <module>Chatlog</module>
     </modules>
 
 
